src/objects/MailingList__c.object
<CustomObject>
    <description>SFDC1-298 Object to hold different mailing lists available for subscription</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>SFDC1-298 detailed description of the purpose of the mailing list</description>
        <inlineHelpText>A short description of the purpose of the mailing list.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MailingListName__c</fullName>
        <description>SFDC1-298 Short name of mailing list</description>
        <externalId>true</externalId>
        <inlineHelpText>Please enter a Marketing approved Mailng List Name.</inlineHelpText>
        <label>Mailing List Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PKIDMailList__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>MIL{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID MailList</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>SFDC1-298 Status of the mailing list</description>
        <inlineHelpText>Indicates whether the mailing list is active or no longer in use.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Mailing List</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ML-{0000}</displayFormat>
        <label>Mailing List Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mailing Lists</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>OnlyOwnerOrAdminUpdateStatus</fullName>
        <active>true</active>
        <description>SFDC1-298 Only Owner of the Mailing list of Admin can update the status of the mailing list</description>
        <errorConditionFormula>AND(ISCHANGED(Status__c),  OR($User.Id&lt;&gt;OwnerId, $Profile.Name&lt;&gt;&apos;System Administrator&apos;))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Status can only be updated by Owner of the mailing list or system administrator</errorMessage>
    </validationRules>
</CustomObject>